<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.murat.veripark.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dp"
            android:background="@color/soft_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sembol_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/symbol"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/diff_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/diff"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/volume_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/volume"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/buy_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/buy"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/sell_text_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sell"
                tools:text="123a" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dimmed_text" />

            <TextView
                android:id="@+id/change_image_view"
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            tools:listitem="@layout/view_holder_stocks_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
